# ZenAPI

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
docs/: 01_PRD.md  02_DESIGN.md  03_LAYOUT.md  04_COMPONENTS.md  05_TODO.md  06_DEV_GUIDE.md  07_USER_GUIDE.md  08_SCRIPTING.md  09_GRPC.md  BENCHMARK.md  BRU_FORMAT.md  DESIGN.md  DEV_GUIDE.md  GRPC.md  PRD.md  RESEARCH_ARCH.md  RESEARCH_FEATURES.md  RESEARCH_INTERACTION.md  RESEARCH_UI.md  SCRIPTING.md  TODO.md  USER_GUIDE.md
src/: app.rs  assertions.rs  auth.rs  cli.rs  client.rs  codegen.rs  collection_runner.rs  collections.rs  grpc.rs  history.rs  lib.rs  main.rs  mock_server.rs  openapi.rs  pre_request.rs  variables.rs
src/app/: api_key_ui.rs  bindings.rs  clipboard_ui.rs  codegen_ui.rs  collection_file_ui.rs  collection_folder_ui.rs  collection_request_ui.rs  collection_tree.rs  environment_ui.rs  file_dialog.rs  file_io.rs  file_picker_ui.rs  fonts.rs  graphql.rs  grpc_ui.rs  history_ui.rs  input.rs  key_value_ui.rs  mock_ui.rs  openapi_ui.rs  read_only_text.rs  realtime.rs  request_editor_ui.rs  request_projection.rs  request_sender_ui.rs  response_assertion_parser.rs  response_format.rs  response_ui.rs  runner.rs  state.rs  test_assertion_ui.rs  tests.rs  ui_smoke.rs  variable_ui.rs
src/client/: response.rs  sse.rs  (+2 more)
ui/: action_button.slint  address_bar.slint  analytics_page.slint  api_keys_components.slint  api_keys_detail_panel.slint  api_keys_integration_panel.slint  api_keys_list_panel.slint  api_keys_page.slint  app.slint  app_analytics_page_host.slint  app_api_keys_page_host.slint  app_auxiliary_pages.slint  app_auxiliary_pages_workbench.slint  app_codegen_page_host.slint  app_dashboard_page_host.slint  app_documentation_page_host.slint  app_environment_page_host.slint  app_mock_manager_page_host.slint  app_navigation.slint  app_runner_page_host.slint  app_settings_page_host.slint  app_team_page_host.slint  auth_api_key_panel.slint  auth_basic_panel.slint  auth_mode_toolbar.slint  auth_oauth2_panel.slint  auth_panel.slint  auth_token_panel.slint  body_content_panel.slint  body_mode_toolbar.slint  body_panel.slint  bottom_navigation.slint  cards.slint  codegen_page.slint  dashboard_page.slint  documentation_detail_panel.slint  documentation_page.slint  documentation_sidebar_panel.slint  documentation_try_it_panel.slint  editors.slint  (+83 more)
(+53 files in other folders)
