[package]
name = "zenapi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
futures-util = "0.3"
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", package = "gpui_platform", features = ["wayland", "x11"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
temp-dir = "0.1"
