[package]
name = "zenapi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
copypasta = "0.10"
futures-util = "0.3"
prost = "0.14"
prost-types = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
slint = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14", default-features = false, features = ["router", "transport"] }
tonic-reflection = "0.14"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

[build-dependencies]
slint-build = "1"

[dev-dependencies]
temp-dir = "0.1"
tokio-stream = { version = "0.1", features = ["net"] }
